--- a/.github/workflows/my-starter-workflow.yml
+++ b/.github/workflows/my-starter-workflow.yml
@@ -14,7 +14,7 @@ jobs:
           echo Add other actions to build,
           echo test, and deploy to your project.
 
-  call-reusable:
+  call-reusable-workflow:
     uses: ./.github/workflows/reusable-workflow.yml
     with:
       node: 14
